# VaireProject

./: main.py  pyproject.toml
core/: __init__.py  i_weaver.py  utils.py
core/value_object/: mode.py
decoder/: decoder.py
encoder/: encoder.py
