[tool.poetry]
name = "VaireProject"
version = "0.1.0"
description = "Steganography project"
authors = ["Durill <wojbat4@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
